<resources>
    <string name="app_name">STart</string>

    <!-- 외부 링크 TODO: 인스타 링크는 아이디 변경 시 매 번 업데이트 해야함 -->
    <string name="link_instagram">https://www.instagram.com/seoultech__39/</string>
    <string name="link_youtube">https://www.youtube.com/channel/UCLYljVZiYHeJxaHTbRpVauQ</string>
    <string name="link_kakao_talk">https://pf.kakao.com/_yxatCV</string>
    <string name="link_st_home">https://gwack2.seoultech.ac.kr/</string>
    <string name="link_privacy_policy">https://suee97.notion.site/suee97/2022-09-04-a48b73c5ed6a43068286d8f2d6adab05</string>
    <string name="link_terms_of_service">https://suee97.notion.site/2022-09-04-f4d6b4b0db614adba75d4c619371aea9</string>

    <string name="seoultech_council">서울과학기술대학교 총학생회</string>

    <string name="info1_1">총학생회는 학생회칙이 정하는 바에 따라 입후보한 자에 대해 재학중인 전체학생들의 직접선거에 의해 선출되며, 성실, 협동, 창의를 교훈으로 민주적인 학생 자치활동을 통하여 민주시민으로서 자질을 함양하고 대학문화를 창출하여 자율적 발전을 도모하며 사회와 민주국가발전에 기여할 수 있는 능력 배양을 목적으로 한다.</string>
    <string name="title_activity_main">MainActivity</string>


    <!--Version 1.1.0-->
    <string name="next">다음</string>
    <string name="confirm">확인</string>

    <!-- 학번 -->
    <string name="student_id">학번</string>

    <string name="hint_student_id">학번 8자리를 입력하세요.</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="sign_in_fail">로그인에 실패하였습니다. 정보를 다시 입력해주세요.</string>
    <string name="auto_login">자동 로그인</string>
    <string name="agree_to_terms_and_conditions">약관동의</string>


    <!-- 비밀번호 -->
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="password_description">비밀번호를 설정해주세요.\n(특수문자, 대소문자, 숫자 포함 8자 이상 16자 이내)</string>
    <string name="password_format_fail">비밀번호 형식이 올바르지 않습니다.</string>
    <string name="password_format_success">올바른 형식의 비밀번호가 입력되었습니다.</string>
    <string name="password_equal_fail">동일한 비밀번호를 입력해주세요.</string>
    <string name="password_equal_success">동일한 비밀번호가 입력되었습니다.</string>

    <string name="hint_password">비밀번호를 입력하세요.</string>
    <string name="hint_password_confirm">비밀번호를 다시 입력하세요.</string>

    <!-- 비밀번호 재설정 -->
    <string name="reset_password">비밀번호 재설정</string>
    <string name="reset_password_auth_description_1">가입된 계정의 학번을 입력해주세요.</string>
    <string name="reset_password_auth_description_2">인증요청을 누르면 학번으로 가입된 계정의 휴대폰번호로 인증코드가 발송됩니다. 인증코드는 3분 내로 입력해주세요.</string>

    <string name="reset_password_description">비밀번호를 재설정해주세요.\n(특수문자, 대소문자, 숫자 포함 8자 이상 16자 이내)</string>

    <!-- 인증 -->
    <string name="auth_code">인증코드</string>
    <string name="auth_request">인증요청</string>

    <string name="hint_auth_code">인증코드 입력</string>

    <string name="auth_sms_success">SMS가 전송되었습니다.</string>

    <!-- 설정 -->
    <string name="setting">설정</string>
    <string name="account_management">계정 관리</string>
    <string name="logout">로그아웃</string>
    <string name="instagram">인스타그램</string>
    <string name="youtube">유튜브</string>
    <string name="kakao_talk">카카오톡</string>
    <string name="home_page">홈페이지</string>

    <!-- 상시사업 -->
    <string name="rent_description">1. 대여 물품이 파손되었을 시, 수리 비용의 80%를 대여인(또는 대여 기구) 측에서 비용하고 나머지 20%는 총학생회 자치회비에서 부담한다. \n2. 파손에 대해 수리가 불가하다고 판단될 시, 대여인(또는 대여 기구)에서 같은 제품 또는 그에 걸맞는 비용을 부담하여야 한다.</string>


    <string name="intro1">총학생회는 학생회칙이 정하는 바에 따라 입후보한 자에 대해 재학 중인 전체 학생들의 직접선거에 의해 선출되며, 성실, 협동, 창의를 교훈으로 민주적인 학생 자치활동을 통하여 민주시민으로서 자질을 함양하고 대학 문화를 창출하여 자율적 발전을 도모하며 사회와 민주국가 발전에 기여할 수 있는 능력 배양을 목적으로 한다.</string>
    <string name="intro2">자랑스럽고 존경하는 우리 서울과학기술대학교 학우 여러분 안녕하십니까!\n
2023년 1월 1일부로 임기를 시작하게 된 제39대 Dream 총학생회 인사드립니다.\n\n
먼저, 선거 기간 동안 학우 여러분들의 많은 관심과 응원 덕에 총학생회가 선출되어 기쁨과 감사의 말씀 전합니다.\n
지난 3년 유례없는 전염병인 코로나로 인한 어려운 시기를 이겨내고 일상 회복을 마주하고 있는 현시점에 여러분께 인사드릴 수 있어 영광입니다.\n\n
이제는 코로나라는 틀에서 벗어나 그동안 학우분들께서 이루지 못했던 꿈들을 함께 이뤄갈 시간입니다.\n
저희 Dream 총학생회는 그 과정의 뒷받침 역할을 통해 저희 슬로건인 ‘우리가 함께 이뤄가는 꿈’을 실현하겠습니다.\n\n
학우 여러분의 소중한 꿈을 이뤄가실 수 있게 다음을 약속하겠습니다.\n\n
첫째, 학우 여러분들과 가장 먼저 소통하겠습니다.\n
회의록 공개, 미팅 발언 공유, 상시 건의함 및 피드백, 소통 부스 운영, 주요 보직자 및 정무직 공무원 간담회를 이행하겠습니다.\n\n
둘째, 학우 여러분의 인권과 권리를 보장하겠습니다.\n
생활하시면서 느낀 불편함, 행정 시스템 마비, 불평등 및 차별, 학습권 침해 등 학생으로서 누려야 할 모든 권리를 보장할 수 있게 노력하고 발전시키겠습니다.\n\n
셋째, 더욱 활기찬 캠퍼스를 만들겠습니다.\n
일상 회복이 된 현재, 대학 생활의 꽃인 행사를 모두 진행해 학우분들의 재밌는 대학 생활을 보장하겠습니다.\n\n
학생 사회 발전을 위해 힘 써주신 역대 총학생회 선배님들께 감사드리며, 팬데믹이라는 어려운 상황 속에서 학우들의 인권과 권리를 보장하는 데 최선을 다하신 선배님들께도 존경을 표합니다.\n\n
이제 선배님들의 노고를 이어받아 학우분들을 위해 곁에 항상 함께하는 총학생회가 되겠습니다.\n</string>
    <string name="intro3">우리가 함께 이뤄가는 꿈, 제39대 Dream 총학생회 올림</string>
    <string name="faq">Q : 자치회비는 왜 내야 하나요?\n
A : 우선 자치회비는 총학생회, 학생복지위원회, 동아리연합회, 교지편집위원회가 운영되는 데에 쓰이며 전체학생대표자대회를 통해 각각 자치기구 예산으로 엄정하게 인준되며 결산내역은 철저한 보고를 원칙으로 한다는 점을 알려드리며, 자치회비란 자치기구의 존속 및 사업 추진을 위해 자발적으로 납부하는 비용입니다. 이는 우리 서울과학기술대학교 학우 여러분의 권리증진과 학교생활 만족도를 증진하기 위해 사용되고 있습니다.
\n\n
Q : 등록금 납부 기간에 자치회비를 납부하지 않았다면, 추가로 납부할 수 있나요?\n
A : 정규 등록 기간 이후, 자치회비 추가 납부 기간이 설정되어 납부 방법에 대한 공지가 이루어집니다. 이 기간에 맞춰 자치회비 납부를 진행하면 됩니다.
\n\n
Q : 총학생회에 건의/상시사업을 위해 총학생회실에 방문하고 싶은데 총학생회실은 어디에 있나요?\n
A : 총학생회실은 제1학생회관 (37번 건물) 226호에 있습니다.
\n\n
Q : 자치회비는 어떻게 내나요?\n
A : 자치회비는 매 학기 등록금 납부 기간에 가상계좌를 통해 납부하실 수 있습니다. 고지서에 기재된 등록금에 11,000원을 추가한 금액을 입금하면 자동으로 자치회비 납부 처리가 됩니다. 세부사항은 등록금 고지서를 통해 확인하실 수 있습니다. 또한 등록금 납부기간에 기재된 학생처나 총학생회 번호(02-970-7011)로 연락주시면 자세한 설명을 들으실 수 있습니다.
\n\n
Q : 문화기획국에서는 어떤 일을 하나요?\n
A : 문화기획국은 어의대동제, 어의체전 등 학우분들이 즐길 수 있는 학교에서의 전반적인 문화 행사 및 텐츠를 기획합니다. 또한, 원활한 이행을 위해 행사에 대한 지속적인 관리 감독을 진행합니다.
\n\n
Q : 정책기획국에서는 어떤 일을 하나요?\n
A : 정책기획국은  각종 정책, 학술 기획  등 학우들의 편의를 위한 업무를 담당합니다. 학교 행정과 제도에 학우들의 목소리를 반영하고 개선하는 데 중점을 두고 활동합니다.
\n\n
Q : 사무국은 어떤 일을 하나요?\n
A : 사무국은 대외적으로 학생자치기구 및 특별기구에 자치회비를 배분하는 일을 맡고 있으며, 대내적으로는 학생회실 운영 및 상시사업 진행에 필요한 비품을 구입하고 그에 따른 재정업무를 처리합니다. 투명하고 공정한 업무 수행을 위해 자치회비 예·결산안을 \'전체학생대표자대회\'에서 인준받으며 관련 자료는 매월 활동 보고 및 재정감사 결과를 통해 확인할 수 있습니다.
\n\n
Q : 홍보국에선 어떤 일을 하나요?\n
A : 홍보국은 총학생회에서 진행하는 다양한 행사 및 각종 안내 사항을 시각 자료를 통해 효과적으로 전달하는 역할을 맡고 있습니다. 총학생회 공약 이행, 활동 보고 카드 뉴스, 이벤트 사업 등 카드 뉴스부터 포스터까지 다양한 업무를 진행합니다.
\n\n
Q : 정보통신국은 어떤 일을 하나요?\n
A : 정보통신국은 총학생회 주관 행사에 대한 안내는 물론, 학우 여러분의 학교생활과 직결되는 여러 사항에 대한 논의 결과에 대하여 안내하고 있습니다. 학우들과의 소통창구를 원활히 운영하기 위해 힘쓰고 있습니다.
\n\n
Q : 대외협력국은 어떤 일을 하나요?\n
A : 대외협력국은 교외 즉, 학교 밖의 다른 단체와 협력을 통해서 대학 문제에 대한 해결을 논의하는 데 중점을 가지고 활동합니다. 다양한 연합체와 회의를 통하여 사안에 대해 논의하고 진행합니다. 또한, 다양한 업체와의 활발한 제휴 협약을 통해 학우들의 복지를 위해 힘쓰고 있습니다.
\n\n
Q : 미디어국은 어떤 일을 하나요?\n
A : 미디어국은 학생사회의 장기적인 발전을 위해, 총학생회의 사업 전반에 대한 영상 콘텐츠 제작을 담당하고 있습니다. 효과적인 아카이빙을 위한 기틀을 다지고, 총학생회 유튜브 채널을 운영하고 있습니다.
\n\n
Q : IT국은 어떤 일을 하나요?\n
A  : IT국은 총학생회 애플리케이션을 기획하고 제작하고 있습니다. 성능 향상과 결함 수정 등 지속적인 유지보수를 통해 원활한 애플리케이션 사용을 돕고 있습니다. 기능 개선 제안, 오류 신고는 총학생회 애플리케이션을 통해 가능합니다.</string>

    <string name="frag0">총학생회는 산하에 중앙집행국, 단과대학학생회, 과학생회, 동아리연합회, 학생복지위원회, 교지편집위원해 러비, 총졸업준비위원회, 학생인권위원회, 재정감사위원회를 둔다.</string>
    <string name="frag1">\n학생자치기구\n</string>
    <string name="frag2">중앙집행국\n
총학생회장, 부총학생회장, 집행위원장, 각 집행국(부·차)장과 국원으로 구성되며 본회의 최고집행기구이다.\n\n

단과대학 학생회\n
단과대학 학생회는 각 단과대학의 최고 자치 기구로, 단과대학 학생회는 각 단과대학의 모든 회원으로 구성하며, 단과대학의 최고집행기구이다.\n\n

학과 학생회\n
학과 학생회는 본회의 기초자치 기구이자 각 학과의 최고 자치기구로, 학과 학생회는 각 학과의 모든 회원으로 구성하며, 학과의 최고집행기구이다.\n\n

동아리연합회\n
동아리연합회에서 등록된 정규동아리들의 연합체인 동아리연합회는 전 동아리의 민주적 자치를 위한 대표기구이다. 동아리연합회의 으뜸빛, 버금빛을 동아리연합회 내에서 선거로 선출하며 동아리 으뜸빛은 전 동아리인들을 대표하여 동아리의 자치적 활동에 필요한 제반 업무를 담당한다.\n\n
학생복지위원회\n
학생복지위원회 위원장과 부위원장은 반대표(각 학과, 각반) 이상 직선 대표자들에 의해 선출된다. 본회 회원들의 복지향상을 위한 자율적 활동에 필요한 제반 사항은 학생복지위원회의 자치회칙에 따른다.\n\n</string>

    <string name="frag3">\n상설기구\n</string>
    <string name="frag4">교지편집위원회 러비\n
총학생회 상설 특별기구로서 교지 발간 등을 위한 제반 업무를 담당하며 독자성과 전문성으로 편집권 및 예산집행의 자율권을 가진다.\n\n</string>

    <string name="frag5">\n정기특별기구\n</string>
    <string name="frag6">재정감사위원회\n
학생들이 납부한 여러 종류의 자치회비를 사용하는 총학생회 산하의 과와 단과대학을 포함한 모든 기구의 예.결산안을 대조하여 본회의 목적에 맞지 않게 사용되는 일을 감시하는 단체이다.\n\n</string>

    <string name="frag7">\n특별기구\n</string>
    <string name="frag8">학생인권위원회\n
교내에서 일어는 다양한 인권 관련 사건에 대해 학생들의 의견을 대표하고, 학생들의 인권 의식 향상을 위해 노력하는 단체이다. 학생인권위원회의 활동에 필요한 제반 사항은 학생인권위원회의 자치회칙에 따른다.\n\n

총졸업준비위원회\n
총출업준비위원회는 졸업과 사회진출에 관한 업무를 관할하는 상설특별기구이며 회원이 될 자격은 본회의 각과 졸업준비위원장과 졸업이 가능한 본회의 회원으로 구성한다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="url_polar_bear">"https://cdn.pixabay.com/photo/2023/03/06/13/57/polar-bear-7833514_1280.jpg"</string>

</resources>
