<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.reset.ResetPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dream_action_bar_height"
        android:background="@color/dream_action_bar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dream_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_logo"
        android:layout_width="157dp"
        android:layout_height="76dp"
        android:src="@drawable/logo_dream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/text_reset_password_description"
        style="@style/Theme.Dream.Typeface_Body_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
        android:layout_marginBottom="38dp"
        android:text="@string/reset_password_description"
        app:layout_constraintBottom_toTopOf="@id/text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_password"
        style="@style/Theme.Dream.Typeface_Title_Input"
        android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
        android:layout_marginBottom="11dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/layout_input_password"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_password_caption"
        style="@style/Theme.Dream.Typeface_Caption"
        android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_password"
        tools:text="@string/password_format_fail" />

    <TextView
        android:id="@+id/text_password_confirm"
        style="@style/Theme.Dream.Typeface_Title_Input"
        android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
        android:layout_marginBottom="11dp"
        android:text="@string/password_confirm"
        app:layout_constraintBottom_toTopOf="@+id/layout_input_password_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginStart="@dimen/dream_layout_margin_horizontal" />

    <TextView
        android:id="@+id/text_password_confirm_caption"
        style="@style/Theme.Dream.Typeface_Caption"
        android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/text_password_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_password_confirm"
        tools:text="@string/password_equal_fail" />

    <LinearLayout
        android:id="@+id/layout_input_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/dream_input_height"
        android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_dream"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/text_password_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_password"
            style="@style/Theme.Dream.Typeface_Body_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dream_input_margin_horizontal"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColorHint="@color/dream_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_input_password_confirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/dream_input_height"
        android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
        android:layout_marginBottom="50dp"
        android:background="@drawable/input_dream"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_password_confirm"
            style="@style/Theme.Dream.Typeface_Body_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dream_input_margin_horizontal"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_password_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColorHint="@color/dream_gray" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        style="@style/Theme.Dream.Button_Primary"
        android:layout_width="0dp"
        android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
        android:layout_marginBottom="30dp"
        android:enabled="false"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>