<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.login.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_logo"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.1"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_logo"
                android:layout_width="157dp"
                android:layout_height="76dp"
                android:layout_marginBottom="@dimen/dream_logo_margin_bottom"
                android:src="@drawable/logo_dream_original"
                app:layout_constraintBottom_toTopOf="@+id/text_result"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guide_logo"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/text_student_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dream_layout_margin_horizontal"
                android:layout_marginBottom="11dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/student_id"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/layout_input_student_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_goneMarginStart="@dimen/dream_layout_margin_horizontal" />

            <TextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dream_layout_margin_horizontal"
                android:layout_marginBottom="11dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/layout_input_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_goneMarginStart="@dimen/dream_layout_margin_horizontal" />

            <TextView
                android:id="@+id/text_password_caption"
                style="@style/Theme.Dream.Typeface_Caption"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintBottom_toBottomOf="@id/text_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_password"
                tools:text="@string/password_format_fail" />

            <LinearLayout
                android:id="@+id/layout_input_student_id"
                android:layout_width="0dp"
                android:layout_height="@dimen/dream_input_height"
                android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_dream"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/text_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_student_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dream_input_margin_horizontal"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/pretendard_regular"
                    android:hint="@string/hint_student_id"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColorHint="@color/text_caption"
                    android:textSize="@dimen/dream_input_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_input_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/dream_input_height"
                android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
                android:layout_marginBottom="73dp"
                android:background="@drawable/input_dream"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dream_input_margin_horizontal"
                    android:layout_weight="1"
                    android:background="@null"
                    android:fontFamily="@font/pretendard_regular"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/text_caption"
                    android:textSize="@dimen/dream_input_text_size" />
            </LinearLayout>

            <!-- 자동 로그인 체크박스 -->
            <!--androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_auto_login"
                style="@style/Theme.Dream.CheckBox"
                app:layout_constraintTop_toBottomOf="@id/layout_input_password"
                android:layout_marginTop="7dp"
                android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
                android:text="@string/auto_login"
                app:layout_constraintStart_toStartOf="parent" /-->

            <TextView
                android:id="@+id/text_result"
                style="@style/Theme.Dream.Typeface_Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:textColor="@color/dream_red"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="@+id/text_student_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/sign_in_fail"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/Theme.Dream.Button_Primary"
                android:layout_marginHorizontal="@dimen/dream_layout_margin_horizontal"
                android:layout_marginBottom="57dp"
                android:enabled="false"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_reset_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/reset_password"
                android:textColor="@color/text_caption"
                app:layout_constraintStart_toStartOf="@id/btn_login"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/register"
                android:textColor="@color/text_caption"
                app:layout_constraintEnd_toEndOf="@id/btn_login"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>
